Improve Strahler/TreeStatistics